fixed on safari

--- a/frontend/client/components/MultipleChoiceAnswerer/style.css
+++ b/frontend/client/components/MultipleChoiceAnswerer/style.css
@@ -1,10 +1,8 @@
 
 .main {
-  align-items: center;
   box-sizing: border-box;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  flex-direction: column;
   padding: 1rem 2rem;
 }
 
