--- a/frontend/client/components/QuestionPicture/style.css
+++ b/frontend/client/components/QuestionPicture/style.css
@@ -31,6 +31,7 @@
 .pictureLoader {
   height: 5rem;
   position: relative;
+  transition: opacity 250ms;
   width: 5rem;
 }
 
